+async adding & like

--- a/PhotoPortal/src/main/webapp/WEB-INF/web.xml
+++ b/PhotoPortal/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
     <servlet>
         <servlet-name>CheckAppServlet</servlet-name>
         <servlet-class>com.bsu.testServlets.CheckAppServlet</servlet-class>
@@ -51,7 +53,7 @@
 
     <servlet-mapping>
         <servlet-name>CheckAppServlet</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/app</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>CheckStatusServlet</servlet-name>
@@ -109,8 +111,4 @@
         <filter-name>ShowInfoFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
 </web-app>
