--- a/PhotoPortal/pom.xml
+++ b/PhotoPortal/pom.xml
@@ -31,6 +31,19 @@
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <!--MySqlConnector -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.45</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
