--- a/PhotoPortal/pom.xml
+++ b/PhotoPortal/pom.xml
@@ -53,7 +53,12 @@
             <artifactId>commons-dbcp2</artifactId>
             <version>2.5.0</version>
         </dependency>
-
+        <!-- MD-5 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.12</version>
+        </dependency>
     </dependencies>
 
     <build>
