--- a/PhotoPortal/src/main/webapp/WEB-INF/web.xml
+++ b/PhotoPortal/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,7 @@
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
+    
     <servlet>
         <servlet-name>CheckAppServlet</servlet-name>
         <servlet-class>com.bsu.testServlets.CheckAppServlet</servlet-class>
@@ -53,6 +54,14 @@
     <servlet>
         <servlet-name>LikeServlet</servlet-name>
         <servlet-class>com.bsu.servlet.LikeServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>LogInServlet</servlet-name>
+        <servlet-class>com.bsu.servlet.LogInServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>LogOutServlet</servlet-name>
+        <servlet-class>com.bsu.servlet.LogOutServlet</servlet-class>
     </servlet>
 
 
@@ -104,7 +113,14 @@
         <servlet-name>LikeServlet</servlet-name>
         <url-pattern>/like</url-pattern>
     </servlet-mapping>
-
+    <servlet-mapping>
+        <servlet-name>LogInServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LogOutServlet</servlet-name>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
 
 
     <filter>
